--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -25,7 +25,7 @@ p {
  header#cabecalho{
     border-bottom: 1px #606060 solid ;
     height: 150px;
-    background: url("../_imagens/glass-logo-peq.jpg")no-repeat 0px 80px;
+    background: url("_imagens/glass-logo-peq.jpg")no-repeat 0px 80px;
 }
 header#cabecalho h1{
     font-family: Arial, sans-serif; 
