--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-
+@font-face{
+    font-family:'fontelogo';
+    src:url("../_fonts/bubblegum-sans-regular.otf");
+}
 body {
     background-color: #dddddd;
     color:rgba(0, 0, 0, 1);
@@ -25,10 +28,10 @@ p {
  header#cabecalho{
     border-bottom: 1px #606060 solid ;
     height: 150px;
-    background: url("_imagens/glass-logo-peq.jpg")no-repeat 0px 80px;
+    background: url("../_imagens/glass-logo-peq.jpg")no-repeat 0px 80px;
 }
 header#cabecalho h1{
-    font-family: Arial, sans-serif; 
+    font-family: 'fontelogo', sans-serif; 
     font-size: 30pt;
     color:#606060;
     text-shadow: 1px 1px 1px rgba(0, 0, 0,.6); 
@@ -36,7 +39,7 @@ header#cabecalho h1{
     margin-bottom: 0px;
 }
 header#cabecalho h2{
-    font-family: Arial, sans-serif;
+    font-family: 'fontelogo', sans-serif;
     font-size: 15pt ;
     color: #888888;
     padding: 0px;
