--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @font-face{
     font-family:'fontelogo';
-    src:url("../_fonts/bubblegum-sans-regular.otf");
+    src:url("../fonts/bubblegum-sans-regular.otf");
 }
 body {
     background-color: #dddddd;
@@ -28,7 +28,7 @@ p {
  header#cabecalho{
     border-bottom: 1px #606060 solid ;
     height: 150px;
-    background: url("../_imagens/glass-logo-peq.jpg")no-repeat 0px 80px;
+    background: url("../imagens/glass-logo-peq.jpg")no-repeat 0px 80px;
 }
 header#cabecalho h1{
     font-family: 'fontelogo', sans-serif; 
