--- a/css/estilo.css
+++ b/css/estilo.css
@@ -117,6 +117,9 @@ section#corpo {
     border-right: 2px solid #606060;
     padding-right: 50px ;
 }
+table#tabela{
+    
+}
 aside#lateral {
     display: block;
     width: 500px;
