--- a/css/estilo.css
+++ b/css/estilo.css
@@ -118,7 +118,16 @@ section#corpo {
     padding-right: 50px ;
 }
 table#tabela{
-    
+    border:1px solid #606060;
+    border-spacing: 0px;
+    margin-left: auto;
+    margin-right: auto;
+}
+table#tabela td{
+    border: 1px solid #606060;
+    padding: 10px;
+    text-align: center;
+
 }
 aside#lateral {
     display: block;
