--- a/css/estilo.css
+++ b/css/estilo.css
@@ -127,7 +127,27 @@ table#tabela td{
     border: 1px solid #606060;
     padding: 10px;
     text-align: center;
-
+}
+table#tabela td.ce{
+    color:#ffffff;
+    background-color: #606060;
+    vertical-align: top;
+    font-weight: bold;
+}
+table#tabela td.cd{
+    background-color: #dddddd;
+}
+table#tabela caption{
+    color:#888888 ;
+    font-size:  15pt; 
+    font-weight: bolder;
+}
+table#tabela  caption span{
+    display: block;
+    float: right;
+    color:#000000;
+    font-size: 8pt;
+    margin-top: 10px;
 }
 aside#lateral {
     display: block;
