--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,20 +4,28 @@
     src:url("../fonts/bubblegum-sans-regular.otf");
 }
 body {
-    background-color: #dddddd;
-    color:rgba(0, 0, 0, 1);
+    font-family: arial,sans-serif;
+    background-color: #606060;
+    color:#000000;
 }
 div#interface {
     width: 1150px;
     background-color:#ffffff;
     margin: -20px auto 10px auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0,.5);
-    padding: 40px;
+    padding: 10px;
 }
 
 p {
     text-align:justify;
     text-indent:40px;
+}
+a {
+    color: rgba(rgba(255, 0, 0, 0), green, rgba(0, 0, 255, 0), alpha);
+    text-decoration:none;
+}
+a:hover {
+    text-decoration: underline;
 }
  header#cabecalho img#icone {
     position:absolute;
@@ -32,7 +40,7 @@ p {
 }
 header#cabecalho h1{
     font-family: 'fontelogo', sans-serif; 
-    font-size: 30pt;
+    font-size: 20pt;
     color:#606060;
     text-shadow: 1px 1px 1px rgba(0, 0, 0,.6); 
     padding: 0px;
@@ -114,8 +122,37 @@ section#corpo {
     display:block;
     width: 500px;
     float: left;
-    border-right: 2px solid #606060;
-    padding-right: 50px ;
+    border-right: 1px solid #606060;
+    padding-right: 70px ;
+}
+article#artigo h2{
+    font-size: 15pt;
+    color:#606060;
+    background-color: #cecece;
+    padding: 5px opx 5px 0px;
+    margin: 10px 0px 10px 0px;
+
+}
+header#cabecalho-artigo h1{
+    font-family:'fontelogo',sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-bottom: 0px;
+    margin-top: 0pt;
+    margin-top: 0px;
+}.direita {
+    text-align: right;
+}
+header#cabecalho-artigo h2{
+    font-size: 13pt;
+    color: #606060;
+    background-color: #dddddd;
+    margin: 0px;
+}
+header#cabecalho-artigo h3{
+    font-size: 12px;
+    color: #606060;
+    
 }
 table#tabela{
     border:1px solid #606060;
@@ -153,6 +190,23 @@ aside#lateral {
     display: block;
     width: 500px;
     float: right;
+    background-color:#dddddd ;
+    padding: 10px;
+    margin-top: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0,.5);
+}
+aside#lateral h1{
+    font-family: 'fontelogo',sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-top: 0px;
+}
+aside#lateral h2{
+    background-color: #606060;
+    font-size: 15pt;
+    color: #dddddd;
+    padding: 5px;
+    
 }
 footer#rodape{
     clear:both;
